# gitshot

./: Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
src/: cli.rs  config.rs  inline_diff.rs  main.rs  renderer.rs
src/command/: diff.rs  mod.rs  status.rs
src/command/diff/: emphasizer.rs  mod.rs  tokenizer.rs
src/config/: mod.rs  style.rs
src/model/: diff.rs  status.rs
src/renderer/: diff.rs  mod.rs  status.rs
